@@ -1,9 +1,10 @@
-@comment $NetBSD: PLIST,v 1.1 2001/10/31 22:12:16 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.2 2003/06/30 07:29:01 jlam Exp $
 bin/xlock
 lib/X11/app-defaults/XLock
-lib/X11/xlockmore/complete.au
-lib/X11/xlockmore/identify-please.au
-lib/X11/xlockmore/not-programmed.au
-lib/X11/xlockmore/thank-you.au
+lib/X11/xlock/sounds/complete.au
+lib/X11/xlock/sounds/identify-please.au
+lib/X11/xlock/sounds/not-programmed.au
+lib/X11/xlock/sounds/thank-you.au
 man/man1/xlock.1
-@dirrm lib/X11/xlockmore
+@dirrm lib/X11/xlock/sounds
+@dirrm lib/X11/xlock
